// Sistem Obat Database Diagram
// Generated for Laravel 12 Project
// Date: August 7, 2025

Project sistem_obat {
  database_type: 'MySQL'
  Note: '''
    **Sistem Manajemen Obat (Pharmacy Management System)**
    
    Aplikasi untuk mengelola data obat, kategori, supplier, dan user
    dengan sistem role-based access control.
  '''
}

// Tabel Kategori (kategori obat)
Table kategoris {
  id bigint [pk, increment, note: 'Primary Key']
  nama_kategori varchar(255) [not null, note: 'Nama kategori obat']
  id_users bigint [note: 'Foreign key ke tabel users']
  created_at timestamp [note: 'Waktu pembuatan record']
  updated_at timestamp [note: 'Waktu update terakhir']
  
  Note: '''
    **Tabel kategori obat**
    - Menyimpan kategori-kategori obat
    - Relasi dengan user yang mengelola
  '''
}

// Tabel Users (di tengah-tengah sebagai central entity)
Table users {
  id bigint [pk, increment, note: 'Primary Key']
  name varchar(255) [not null, note: 'Nama lengkap user']
  username varchar(255) [unique, not null, note: 'Username untuk login']
  password varchar(255) [not null, note: 'Password terenkripsi']
  role enum('admin', 'pegawai') [default: 'admin', note: 'Role pengguna: admin atau pegawai']
  created_at timestamp [note: 'Waktu pembuatan record']
  updated_at timestamp [note: 'Waktu update terakhir']
  
  Note: '''
    **Tabel pengguna sistem**
    - admin: Akses penuh ke semua fitur
    - pegawai: Akses terbatas (tidak bisa kelola supplier)
  '''
}

// Tabel Suppliers (pemasok obat)
Table suppliers {
  id bigint [pk, increment, note: 'Primary Key']
  nama_supplier varchar(255) [not null, note: 'Nama perusahaan supplier']
  no_telepon varchar(255) [not null, note: 'Nomor telepon supplier']
  alamat text [not null, note: 'Alamat lengkap supplier']
  id_users bigint [note: 'Foreign key ke tabel users']
  created_at timestamp [note: 'Waktu pembuatan record']
  updated_at timestamp [note: 'Waktu update terakhir']
  
  Note: '''
    **Tabel supplier/pemasok obat**
    - Menyimpan data supplier/pemasok obat
    - Relasi dengan user yang mengelola
  '''
}

// Tabel Obats (data obat utama)
Table obats {
  id bigint [pk, increment, note: 'Primary Key']
  nama_obat varchar(255) [not null, note: 'Nama obat']
  tanggal_masuk date [not null, note: 'Tanggal obat masuk ke sistem']
  kategori_id bigint [not null, note: 'Foreign key ke tabel kategoris']
  supplier_id bigint [note: 'Foreign key ke tabel suppliers (optional)']
  tanggal_expired date [not null, note: 'Tanggal kadaluarsa obat']
  stok integer [default: 0, note: 'Jumlah stok obat tersedia']
  id_users bigint [note: 'Foreign key ke tabel users']
  created_at timestamp [note: 'Waktu pembuatan record']
  updated_at timestamp [note: 'Waktu update terakhir']
  
  Note: '''
    **Tabel data obat**
    - Menyimpan informasi lengkap obat
    - Terintegrasi dengan sistem monitoring expired dan stok
    - Relasi dengan user yang mengelola
  '''
}

// Definisi Relasi
Ref: obats.kategori_id > kategoris.id [delete: cascade]
Ref: obats.supplier_id > suppliers.id [delete: set null]
Ref: obats.id_users > users.id [delete: set null]
Ref: kategoris.id_users > users.id [delete: set null]
Ref: suppliers.id_users > users.id [delete: set null]

// Table Groups untuk visualisasi yang lebih baik
TableGroup "Master Data" {
  kategoris
  suppliers
}

TableGroup "Core System" {
  users
}

TableGroup "Transaction Data" {
  obats
}

// Enum definitions
Enum role_enum {
  admin [note: 'Administrator dengan akses penuh']
  pegawai [note: 'Pegawai dengan akses terbatas']
}
